   * Show blank icon for missing files. (Bug #418471, Gary van der Merwe)
 * qcommit/uncommit:
   * Catch AttributeError in save of commit_data during qcommit and/or uncommit 
     in lightweight checkout from branch accessed via smart-server 
     (lp:, bzr+ssh://, bzr:// etc). 
     (Bug #434034 Bug #430382 Bug #463296, Alexander Belchenko)


0.15 "Yellow and green" - 2009-10-19
------------------------------------
What's new in this release: 

 * Compatible with bzr >= 1.17 (works fine with 2.0.x and 2.1.x series).
 * New qrun dialog to launch any (non-interactive) bzr command.
 * Improved speed of qcat, qdiff, qlog.
 * Added Browse button for editor selection in qconfig.
 * qconflicts: Enable multiple selections of conflict items to resolve 
   or launch merge tool for them.
 * qgetupdates and qupdate dialogs now properly support all 3 cases:
   * update tree
   * update bound branch
   * update lightweight checkout
 * qlog can display foreign revision info if available.
 * Sort tags alphabeticaly and case-insensitive in qtag dialog.
 * qexport now has sensible defaults and more user-friendly archive
   types (e.g. tar.gz instead of tgz) displayed in the combo box.
   On windows, the default archive type is now zip as well.
 * And more than 37 bugfixes (plus all critical bugfixes from 0.14.x releases).

Detailed changelog:

 * Compatible with bzr >= 1.17 (works fine with 2.0.x and 2.1.x series).
 * Internal: 
   * Install QUIFactory after we have properly initialize QApplication.
     (#430232, John Arbash Meinel)
   * Better compatibility of qbzr test suite with bzr 2.1.
     (#433843, Vincent Ladeuil)
   * Use unicode('.') everywhere as current directory marker. (Naoki INADA)
   * Don't bundle PyQt4 and Pygments libs to Windows installer anymore.
     (Alexander Belchenko)
   * Get rid of old-style classes to be compatible with PyQt 4.6.
     (#447214)
 * New dialog:
    * qrun (Alexander Belchenko)
 * qadd: